exports[`handles basic scalar types > JSON schema 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "properties": {
    "int": {
      "type": [
        "integer",
        "null"
      ]
    },
    "num": {
      "type": [
        "number",
        "null"
      ]
    },
    "str": {
      "type": [
        "string",
        "null"
      ]
    },
    "bool": {
      "type": [
        "boolean",
        "null"
      ]
    },
    "id": {
      "type": [
        "string",
        "null"
      ]
    }
  },
  "required": [],
  "$defs": {},
  "title": "Variables for query Search"
}
`;

exports[`handles custom scalars > JSON schema 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "properties": {
    "after": {
      "$ref": "#/$defs/scalar/Date"
    },
    "before": {
      "$ref": "#/$defs/scalar/Date"
    }
  },
  "required": [
    "after",
    "before"
  ],
  "$defs": {
    "scalar": {
      "Date": {
        "title": "Date",
        "description": "A date string in YYYY-MM-DD format",
        "type": "string",
        "pattern": "\\\\d{4}-\\\\d{1,2}-\\\\d{1,2}"
      }
    }
  },
  "title": "Variables for query Search"
}
`;

exports[`handles enums > JSON schema 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "properties": {
    "text": {
      "type": "string"
    },
    "kind": {
      "$ref": "#/$defs/enum/MediaKind"
    }
  },
  "required": [
    "text",
    "kind"
  ],
  "$defs": {
    "enum": {
      "MediaKind": {
        "title": "MediaKind",
        "enum": [
          "MOVIE",
          "SERIES"
        ]
      }
    }
  },
  "title": "Variables for query Search"
}
`;

exports[`handles input types > JSON schema 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "properties": {
    "input": {
      "$ref": "#/$defs/input/EventSearchInput"
    }
  },
  "required": [
    "input"
  ],
  "$defs": {
    "input": {
      "EventSearchInput": {
        "type": "object",
        "title": "EventSearchInput",
        "properties": {
          "after": {
            "anyOf": [
              {
                "$ref": "#/$defs/scalar/Date"
              },
              {
                "type": "null"
              }
            ]
          },
          "before": {
            "anyOf": [
              {
                "$ref": "#/$defs/scalar/Date"
              },
              {
                "type": "null"
              }
            ]
          },
          "city": {
            "type": "string"
          }
        },
        "required": [
          "city"
        ]
      }
    },
    "scalar": {
      "Date": {
        "title": "Date",
        "description": "A date string in YYYY-MM-DD format",
        "type": "string",
        "pattern": "\\\\d{4}-\\\\d{1,2}-\\\\d{1,2}"
      }
    }
  },
  "title": "Variables for query Search"
}
`;

exports[`handles nullable and non-nullable arguments > JSON schema 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "properties": {
    "text": {
      "type": "string"
    },
    "maxCount": {
      "type": [
        "integer",
        "null"
      ]
    }
  },
  "required": [
    "text"
  ],
  "$defs": {},
  "title": "Variables for query Search"
}
`;

exports[`handles recursive input types > JSON schema 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "properties": {
    "input": {
      "$ref": "#/$defs/input/FilterInput"
    }
  },
  "required": [
    "input"
  ],
  "$defs": {
    "input": {
      "FilterInput": {
        "type": "object",
        "title": "FilterInput",
        "properties": {
          "and": {
            "type": [
              "array",
              "null"
            ],
            "items": {
              "$ref": "#/$defs/input/FilterInput"
            }
          },
          "or": {
            "type": [
              "array",
              "null"
            ],
            "items": {
              "$ref": "#/$defs/input/FilterInput"
            }
          },
          "not": {
            "anyOf": [
              {
                "$ref": "#/$defs/input/FilterInput"
              },
              {
                "type": "null"
              }
            ]
          },
          "after": {
            "anyOf": [
              {
                "$ref": "#/$defs/scalar/Date"
              },
              {
                "type": "null"
              }
            ]
          },
          "before": {
            "anyOf": [
              {
                "$ref": "#/$defs/scalar/Date"
              },
              {
                "type": "null"
              }
            ]
          },
          "city": {
            "type": [
              "string",
              "null"
            ]
          }
        },
        "required": []
      }
    },
    "scalar": {
      "Date": {
        "title": "Date",
        "description": "A date string in YYYY-MM-DD format",
        "type": "string",
        "pattern": "\\\\d{4}-\\\\d{1,2}-\\\\d{1,2}"
      }
    }
  },
  "title": "Variables for query Search"
}
`;

exports[`handles recursive input types > JSON schema 2`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "additionalProperties": false,
  "properties": {
    "input": {
      "$ref": "#/$defs/input/FilterInput"
    }
  },
  "required": [
    "input"
  ],
  "$defs": {
    "input": {
      "FilterInput": {
        "type": "object",
        "additionalProperties": false,
        "title": "FilterInput",
        "properties": {
          "and": {
            "type": [
              "array",
              "null"
            ],
            "items": {
              "$ref": "#/$defs/input/FilterInput"
            }
          },
          "or": {
            "type": [
              "array",
              "null"
            ],
            "items": {
              "$ref": "#/$defs/input/FilterInput"
            }
          },
          "not": {
            "anyOf": [
              {
                "$ref": "#/$defs/input/FilterInput"
              },
              {
                "type": "null"
              }
            ]
          },
          "after": {
            "anyOf": [
              {
                "$ref": "#/$defs/scalar/Date"
              },
              {
                "type": "null"
              }
            ]
          },
          "before": {
            "anyOf": [
              {
                "$ref": "#/$defs/scalar/Date"
              },
              {
                "type": "null"
              }
            ]
          },
          "city": {
            "type": [
              "string",
              "null"
            ]
          }
        },
        "required": [
          "and",
          "or",
          "not",
          "after",
          "before",
          "city"
        ]
      }
    },
    "scalar": {
      "Date": {
        "title": "Date",
        "description": "A date string in YYYY-MM-DD format",
        "type": "string",
        "pattern": "\\\\d{4}-\\\\d{1,2}-\\\\d{1,2}"
      }
    }
  },
  "title": "Variables for query Search"
}
`;

exports[`handles variable-level list types > JSON schema 1`] = `
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "type": "object",
  "properties": {
    "required": {
      "type": "array",
      "items": {
        "type": "string"
      }
    },
    "mixed": {
      "type": "array",
      "items": {
        "type": [
          "string",
          "null"
        ]
      }
    },
    "optional": {
      "type": [
        "null",
        "array"
      ],
      "items": {
        "type": [
          "string",
          "null"
        ]
      }
    }
  },
  "required": [
    "required"
  ],
  "$defs": {},
  "title": "Variables for query Search"
}
`;
